--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas==2.1.1
 numpy==1.26.0
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
-sklearn==0.0.post9
+scikit-learn==1.3.1
 torch==2.1.0+cu121
 torchaudio==2.1.0+cu121
 torchvision==0.16.0
