--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-yfinance==0.2.28
-pandas==2.1.1
-numpy==1.26.0
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-scikit-learn==1.3.1
-torch==2.1.0+cu121
-torchaudio==2.1.0+cu121
-torchvision==0.16.0
-streamlit==1.35.0
-plotly==5.22.0
+yfinance
+pandas
+numpy
+matplotlib
+matplotlib-inline
+scikit-learn
+torch
+streamlit
+plotly
